[package]
name = "bevy-quic-networking"
version = "0.17.0"
edition = "2024"

[dependencies]
aeronet_io = { version = "0.18.0", optional = true }
bevy = "0.17.3"
bevy_transport = { path = "crates/bevy_transport" }
bytes = "1.11.0"
futures = "0.3.31"
s2n-quic = "1.71.0"
s2n-quic-tls = "0.71.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["sync", "rt-multi-thread", "macros"] }

[dev-dependencies]
bevy = { version = "0.17.3", features = ["bevy_remote"] }

[features]
default = ["performance-warns", "aeronet_io"]

## Creates error components/entities when connections fail
connection-errors = []

## Creates error components/entities when streams fail
stream-errors = []

## Should we warn if buffers are being filled faster than we can drain them?
performance-warns = []
