[package]
name = "bevy-quic-networking"
version = "0.18.0"
edition = "2024"

[dependencies]
aeronet_io = "0.20.0"
bevy = "0.18.1"
## bevy_transport = { path = "crates/bevy_transport" }
bytes = "1.11.1"
futures = "0.3.32"
s2n-quic = "1.77.0"
s2n-quic-tls = "0.77.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["sync", "rt-multi-thread", "macros"] }

[dev-dependencies]
bevy = { version = "0.18.1", features = ["bevy_remote"] }

[features]
default = ["performance-warns"]

## Creates error components/entities when connections fail
connection-errors = []

## Creates error components/entities when streams fail
stream-errors = []

## Should we warn if buffers are being filled faster than we can drain them?
performance-warns = []
